Fix padding on mobile

--- a/frontend/mtg/src/GuessTheMtgCard.css
+++ b/frontend/mtg/src/GuessTheMtgCard.css
@@ -4,7 +4,6 @@
     justify-content: center;
     align-items: center;
     padding: 20px;
-    gap: 20px;
     height: 800px;
     width: 580px;
     box-sizing: border-box;
@@ -87,6 +86,7 @@
 .responsiveImageCard {
     width: 100%; 
     height: auto; 
+    border-radius: 10px;
 }
 
 
@@ -151,7 +151,7 @@
 
 
 @media (max-width: 768px) {
-    .gameContainer {
+    .gameContainer, .solutionContainer {
         width: 100%;
     }
 
@@ -164,21 +164,6 @@
         gap: 10px;
     }
 
-    .inputContainer {
-        gap: 12px;
-    }
-
-    .solutionContainer {
-        max-height: 75vh;
-        padding: 8px;
-    }
-
-    .shareButton,
-    .confirmButton {
-        font-size: 14px; 
-        padding: 8px; 
-    }
-
     .dialog-box {
         width: 90%; 
         padding: 16px;
@@ -187,8 +172,9 @@
 }
 
 @media (max-width: 480px) {
-    .gameContainer {
-        gap: 10px;
+    .gameContainer, .solutionContainer {
+        width: 100%;
+        max-width: 90vw;
     }
 
     .gameContainer h1 {
@@ -200,9 +186,8 @@
     }
 
     .dialog-box {
-        width: 95%;
-        padding: 12px;
-        max-height: 75vh;
-        font-size: 14px;
+        width: 90%; 
+        padding: 16px;
+        max-height: 80vh;
     }
 }
